--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0% ;
+  margin: 0%;
   padding: 0%;
 }
 
@@ -97,7 +97,7 @@ body {
   width: 875px;
 }
 
-.iniciomovil{
+.iniciomovil {
   display: none;
 }
 
@@ -123,7 +123,7 @@ body {
   transition: all 0.5s;
 }
 
-.iniciomovilindex{
+.iniciomovilindex {
   display: none !important;
 }
 
@@ -131,7 +131,7 @@ body {
   max-width: 150px;
 }
 
-.logo__nacional{
+.logo__nacional {
   display: none;
 }
 
@@ -239,7 +239,7 @@ body {
   display: none;
 }
 
-.menu_admin{
+.menu_admin {
   display: none;
 }
 
@@ -679,7 +679,7 @@ iframe {
   display: none;
 }
 
-.dosadmin{
+.dosadmin {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -1075,7 +1075,7 @@ iframe {
   display: inline-block;
 }
 
-.nombre_Usuario{
+.nombre_Usuario {
   display: none !important;
 }
 
@@ -2847,7 +2847,7 @@ iframe {
   margin-top: 50px;
 }
 
-.periodos_flecha{
+.periodos_flecha {
   width: 10%;
   margin-top: -40px;
   margin-left: -20px;
@@ -2855,7 +2855,7 @@ iframe {
   font-size: 25px;
 }
 
-.periodos_flecha a{
+.periodos_flecha a {
   color: #003568;
   text-decoration: underline;
   margin-left: 20px;
@@ -2863,7 +2863,7 @@ iframe {
   transition: all 0.5s linear;
 }
 
-.periodos_flecha a:hover{
+.periodos_flecha a:hover {
   transform: scale(1.05);
   background-color: #003568;
   color: white;
@@ -2908,12 +2908,12 @@ iframe {
   padding: 5px 20px;
 }
 
-.echo_periodo{
+.echo_periodo {
   padding: 15px;
   font-size: 25px;
 }
 
-.echo_periodo a{
+.echo_periodo a {
   color: #003568;
   text-decoration: underline;
   margin-left: 20px;
@@ -2929,20 +2929,20 @@ iframe {
   padding: 5px 10px;
 }
 
-.documentos_disponibles{
+.documentos_disponibles {
   font-size: 28px;
   padding-left: 30px;
   margin-top: 10px;
   margin-bottom: 50px !important;
 }
 
-.mensaje{
+.mensaje {
   margin-top: 20px;
   margin-bottom: 20px;
   padding-left: 30px;
 }
 
-.doc_disp{
+.doc_disp {
   border: 3px #001d38 solid;
   border-radius: 20px;
   margin: auto;
@@ -2951,25 +2951,63 @@ iframe {
   width: 70%;
 }
 
-.titulo_autor{
+.titulo_autor {
   font-size: 25px;
   line-height: 33px;
   color: #001d38;
 }
 
-.nombre_carrera{
+.nombre_carrera {
   font-size: 22px;
   margin-top: -15px;
 }
 
-.ficha{
-  border: 5px #001d38 solid;
+.ficha {
   padding: 18px;
   border-radius: 7px;
   line-height: 30px;
+  text-align: justify;
 }
 
-.pdf{
+.ficha h3 {
+  padding: 15px 25px;
+  border-radius: 15px;
+  text-align: center !important;
+  margin-bottom: 15px;
+  color: white;
+  background-color: #001d38;
+  font-size: 30px;
+}
+
+.ficha p {
+  margin-bottom: 15px;
+}
+
+.ficha strong {
+  color: #001d38;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.pdf {
+  border-radius: 10px;
+  text-decoration: none;
+  margin-right: 20px;
+  background-color: white;
+  color: #001d38;
+  border: 3px #001d38 solid;
+  padding: 10px;
+  font-size: 17px;
+  transition: all 0.5s linear;
+}
+
+.pdf:hover {
+  border: 3px #001d38 solid;
+  background-color: #001d38;
+  color: white;
+}
+
+.view_ficha {
   color: white;
   border-radius: 10px;
   text-decoration: none;
@@ -2981,8 +3019,12 @@ iframe {
   transition: all 0.5s linear;
 }
 
-.pdf:hover{
+.view_ficha:hover {
   border: 3px #001d38 solid;
   background-color: white;
   color: #001d38;
+}
+
+.sab{
+  border: 1px red solid;
 }
