--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   font-size: 18px;
 }
 
-.cab_uni{
+.cab_uni {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly !important;
@@ -163,7 +163,7 @@ body {
   transition: all 0.5s;
 }
 
-.inicio_uni{
+.inicio_uni {
   margin-left: 85%;
   display: flex;
   flex-direction: row;
@@ -3083,22 +3083,22 @@ iframe {
   border: 1px red solid;
 } */
 
-.tit_doc_posg{
+.tit_doc_posg {
   padding: 20px;
   font-size: 24;
   line-height: 32px;
 }
 
-.pdf_busqueda{
+.pdf_busqueda {
   text-align: center;
-  transition: all 0.5s linear;
+  transition: all 0.5s;
 }
 
-.pdf_busqueda:hover{
+.pdf_busqueda:hover {
   transform: scale(1.2);
 }
 
-.pdf_busqueda a{
+.pdf_busqueda a {
   border-radius: 10px;
   text-decoration: none;
   background-color: white;
@@ -3106,11 +3106,11 @@ iframe {
   font-size: 27px;
 }
 
-.tit_panel_consulta{
+.tit_panel_consulta {
   padding-left: 20px;
 }
 
-.botones{
+.botones {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -3119,7 +3119,7 @@ iframe {
   margin-bottom: 20px;
 }
 
-.boton_doc{
+.boton_doc {
   border: 3px #001d38 solid;
   cursor: pointer;
   border-radius: 15px;
@@ -3130,20 +3130,20 @@ iframe {
   transition: all 0.5s linear;
 }
 
-.boton_doc:hover{
+.boton_doc:hover {
   border: 3px #001d38 solid;
   background-color: white;
   color: #001d38;
 }
 
-.clasificaciones{
+.clasificaciones {
   margin-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.clasificaciones input{
+.clasificaciones input {
   border: 3px #001d38 solid;
   border-radius: 20px;
   color: #001d38;
@@ -3154,58 +3154,60 @@ iframe {
   margin-right: 20px;
 }
 
-.clasificaciones label{
+.clasificaciones label {
   margin-right: 20px;
   font-size: 20px;
   color: #001d38;
   font-weight: bold;
 }
 
-.busqueda_archivos{
+.busqueda_archivos {
   background-color: #001d38;
   color: white !important;
   cursor: pointer;
-  transition: all 0.5s linear
+  transition: all 0.5s linear;
 }
 
-.busqueda_archivos:hover{
+.busqueda_archivos:hover {
   background-color: white;
-  color: #001d38 !important
+  color: #001d38 !important;
 }
 
-.tit_doc_busq td{
+.tit_doc_busq td {
   background-color: #ececec;
+  color: #001d38 !important;
+  font-weight: bold;
+  font-size: 22px;
   text-align: center;
   padding: 20px !important;
 }
 
-.tit_doc_busq button{
+.tit_doc_busq button {
   text-decoration: none;
   border: 0px;
   background-color: transparent;
   color: #001d38 !important;
   font-size: 27px;
-  transition: all 0.5s linear;
+  transition: all 0.5s;
   cursor: pointer;
 }
 
-.tit_doc_busq button:hover{
+.tit_doc_busq button:hover {
   transform: scale(1.2);
 }
 
-.tit_def{
+.tit_def {
   padding: 15px;
   background-color: #001d38;
   color: white;
 }
 
-.tit_doc_lic{
+.tit_doc_lic {
   padding: 20px !important;
   font-size: 25px;
 }
 
-.tabla{
-  border: 1px red solid;
+.tabla {
   margin: auto;
   width: 95%;
 }
