--- a/style.css
+++ b/style.css
@@ -3539,10 +3539,12 @@ td {
   align-items: center;
 }
 
-.actions_1 div{
+.icon_action{
+  border: 1px red solid;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
